commented about in headder.. fixed header overflow on laptop screens

--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,12 @@ h2 {
 /*HEADER -- HEADER -- HEADER -- HEADER -- HEADER -- HEADER -- HEADER -- HEADER -- HEADER*/
 
 #pageParent > header {
-  box-sizing: content-box;
   background-color: var(--contentBgColor);
   padding: var(--mainBlankArea);
-  /* max-height: 100vh; */
+  max-height: calc(100vh - (var(--mainBlankArea) * 2));
 
   display: grid;
-  grid-template-rows: repeat(auto-fit);
+  grid-template-rows: 60% 40%;
 
   box-shadow: inset 0 0 35px 0 #000000a6;
 
@@ -98,8 +97,8 @@ header > article {
 }
 #navContainer > nav > ul > li {
   margin: 1vw;
-  background-color: var(--contentBgColor);
 
+  background-color: var(--mainBgColor);
   padding: 5px;
 
   transition: ease-in-out 0.1s all;
@@ -108,7 +107,7 @@ header > article {
 #navContainer > nav > ul > li:hover {
   box-shadow: 0 6px 20px -2px rgba(0, 0, 0, 1);
   transform: scale(1.3);
-  background-color: var(--mainBgColor);
+  background-color: var(--contentBgColor);
 }
 
 /*NAV end -- NAV end -- NAV end -- NAV end -- NAV end -- NAV end*/
@@ -137,7 +136,7 @@ main::-webkit-scrollbar {
   overflow-y: scroll;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 
   border: 1px dashed white;
 }
@@ -150,8 +149,11 @@ main > .mainSections:nth-child(odd) {
 
 .mainSections {
   min-height: calc(100% - var(--mainBlankArea) * 2);
-  margin:0 var(--mainBlankArea) var(--mainBlankArea) var(--mainBlankArea);
-  padding-top:  var(--mainBlankArea);
+  margin: 0 var(--mainBlankArea) var(--mainBlankArea) var(--mainBlankArea);
+  padding-top: var(--mainBlankArea);
+}
+
+.mainSections > div {
 }
 
 /*MAIN END -- MAIN END -- MAIN END -- MAIN END -- MAIN END -- MAIN END -- MAIN END */
@@ -159,16 +161,16 @@ main > .mainSections:nth-child(odd) {
 
 /*MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT*/
 /*MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT -- MAIN > ABOUT*/
-#mainAbout {
+/* #mainAbout {
   display: none;
-}
+} */
 /*MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END*/
 /*MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END -- MAIN > ABOUT END*/
 
 @media only screen and (max-width: 1200px) {
-  #headderAbout {
+  /* #headderAbout {
     display: none;
-  }
+  } */
 }
 
 @media only screen and (max-width: 800px) {
